--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ psycopg2-binary==2.9.9
 dj-database-url==2.1.0
 # Server
 gunicorn==21.2.0
+daphne==4.0.0
 whitenoise==6.6.0
 # Other
 djangorestframework-simplejwt==5.3.0
