--- a/backend/.env
+++ b/backend/.env
@@ -10,4 +10,4 @@ SECRET_KEY=django-insecure-change-this-in-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 SNMP_COMMUNITY=public
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://red-d66nj4msb7us73bgq5e0:6379
